[tool.poetry]
name = "nodal-analysis-service"
version = "0.1.0"
description = ""
authors = ["Харицкий Данил Константинович <Khlive.ftf@gmail.com>"]
readme = "README.md"
packages = [{include = "nodal_analysis_service"}]

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.1"
fastapi = {extras = ["all"], version = "^0.101.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
